Accept new argument previousRevisionID for PATCH article endpoint to detect revision confilcts
Closes: #1056
