# plugins/knowledge/openapi/articles.yml
@@ -1059,6 +1059,9 @@ components:
                 knowledgeCategoryID:
                     description: Category the article belongs in.
                     type: integer
+                previousRevisionID:
+                    description: Article last known revision ID. Need to be passed when patch existing article body.
+                    type: integer
                 locale:
                     description: Locale the article was written in.
                     minLength: 1
@@ -1100,6 +1103,10 @@ components:
                     type: integer
                 knowledgeCategoryID:
                     description: Category the article belongs in.
+                    nullable: true
+                    type: integer
+                articleRevisionID:
+                    description: Article content published revision ID.
                     nullable: true
                     type: integer
                 name:
